--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -1,2 +1,16 @@
 .header
-    display: flex
+    padding: 2rem
+    .container
+        max-width: 1024px
+        width: 100%
+        margin: 0 auto
+        display: flex
+        justify-content: space-between
+        nav, nav ul
+            display: flex
+            align-items: center
+            gap: 2rem
+        nav ul a
+            font-size: 1.6rem
+        .logo
+            font-size: 2rem
