--- a/styles/sass/_global.sass
+++ b/styles/sass/_global.sass
@@ -1,2 +1,9 @@
+*
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+    list-style-type: none
+    text-decoration: none
+    
 html
     font-size: 62.5%
