--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -1,5 +1,11 @@
 .header
-    padding: 2rem
+    position: fixed
+    left: 0
+    right: 0
+    top: 0
+    z-index: 999
+    background: #000
+    padding: 1.5rem 2rem
     .container
         max-width: 1024px
         width: 100%
@@ -14,3 +20,5 @@
             font-size: 1.6rem
         .logo
             font-size: 2rem
+    a
+        color: #fff
