--- a/styles/sass/_header.css
+++ b/styles/sass/_header.css
@@ -1,5 +1,11 @@
 .header {
-  padding: 2rem;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 999;
+  background: #000;
+  padding: 1.5rem 2rem;
 }
 
 .header .container {
@@ -22,4 +28,8 @@
 
 .header .container .logo {
   font-size: 2rem;
+}
+
+.header a {
+  color: #fff;
 }
