--- a/styles/sass/_global.sass
+++ b/styles/sass/_global.sass
@@ -11,7 +11,6 @@
 html
     font-size: 62.5%
 
-
 .btn
     display: flex
     align-items: center
@@ -22,3 +21,6 @@ html
     padding: .6rem .9rem
     &:hover
         transform: scale(1.1)
+
+main
+    margin-top: 14rem
