--- a/styles/sass/_global.sass
+++ b/styles/sass/_global.sass
@@ -7,12 +7,13 @@
     text-decoration: none
     font-family: 'Roboto', sans-serif
     transition: all .3s ease
+    letter-spacing: 0.2rem
     
 html
     font-size: 62.5%
 
 .btn
-    display: flex
+    display: inline-flex
     align-items: center
     justify-content: center
     font-size: 1.5rem
@@ -22,5 +23,3 @@ html
     &:hover
         transform: scale(1.1)
 
-main
-    margin-top: 14rem
