--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -9,14 +9,17 @@
     padding-left: 12%
     .content
         width: 400px
-        transform: translateY(-20px)
+        transform: translate(16px,-22px)
         h1, p, a
             color: #fff
             margin-bottom: 1.6rem
             font-weight: bold
+            text-shadow: .1rem .1rem .1rem #111
+            letter-spacing: 0.3rem
         h1
             font-size: 6rem
             line-height: .9
+            
         p
             font-size: 1.7rem
            
