--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -1,15 +1,18 @@
 .starthomePage
     height: 80vh
-    background: url(../../public/bg-1.jpg) no-repeat
+    background: #b01bba url(../../public/dog-2.png) no-repeat
     background-size: cover 
     background-position:  center
     display: flex
-    justify-content: flex-start
+    justify-content: center
     align-items: center
-    padding-left: 12%
+
+
     .content
         width: 400px
         transform: translate(16px,-22px)
+        padding: 2rem 3rem
+        background: #00000047
         h1, p, a
             color: #fff
             margin-bottom: 1.6rem
