--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -32,12 +32,14 @@
     img
         width: 100%
         height: 100%
+        object-fit: cover
     .container
         display: grid
         grid-template-columns: repeat(3,0.78fr)
         gap: 1.4rem
         .box
             position: relative
+            height: 400px
             h2
                 position: absolute
                 top: 4%
