--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -23,7 +23,6 @@
         h1
             font-size: 5rem
             line-height: 1.1
-            
         p
             font-size: 1.7rem
 
@@ -45,4 +44,5 @@
                 top: 4%
                 left: 4%
                 font-size: 2rem
+                color: #fff
            
