--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -4,6 +4,7 @@
     right: 0
     top: 0
     z-index: 999
+    background: #111
     padding: 1.5rem 2rem
     .container
         max-width: 1024px
