--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -32,6 +32,7 @@
         width: 100%
         height: 100%
         object-fit: cover
+        border-radius: 1.3rem
     .container
         display: grid
         grid-template-columns: repeat(3,0.78fr)
@@ -39,6 +40,7 @@
         .box
             position: relative
             height: 400px
+            
             h2
                 position: absolute
                 top: 4%
