--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -1,6 +1,6 @@
 .starthomePage
     height: 80vh
-    background: #b01bba url(../../public/dog-2.png) no-repeat
+    background: url(../../public/dog-2.png) no-repeat
     background-size: cover 
     background-position:  center
     display: flex
