--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -47,4 +47,44 @@
                 left: 4%
                 font-size: 2rem
                 color: #fff
+
+
+.card
+    position: relative
+    &:hover
+        h2
+            display: none
+        .contIcon
+            z-index: 55
+            background: #5a5a5aa3
+            .view
+                display: block
+    .contIcon
+        position: absolute
+        top: 0
+        right: 0
+        bottom: 0
+        left: 0
+        border-radius: 1.3rem
+    .view, h2
+        position: absolute
+    .view    
+        font-size: 4rem
+        z-index: 777
+        top: 50%
+        right: 50%
+        color: #C18C00
+        display: none
+    h2
+        position: absolute
+        bottom: 2%
+        right: 4%
+        color: #111
+        font-size: 3.2rem
+        padding: 0.7rem 1.3rem
+        background: #C18C00
+        border-radius: .7rem
+    
+   
+
            
