--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -46,7 +46,10 @@
                 top: 4%
                 left: 4%
                 font-size: 2rem
-                color: #fff
+                color: #111
+                padding: 0.7rem 1.3rem
+                background: #C18C00
+                border-radius: .7rem
 
 
 .card
