--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -62,6 +62,7 @@
             background: #5a5a5aa3
             .view
                 display: block
+                text-align: center
     .contIcon
         position: absolute
         top: 0
@@ -71,19 +72,29 @@
         border-radius: 1.3rem
     .view, h2
         position: absolute
-    .view    
-        font-size: 4rem
+    .view
+        .ege    
+            font-size: 4rem
+            display: block
+            margin: 0 auto
+            text-shadow: .1rem .1rem .1rem #111
+        span
+            font-size: 1.4rem
+            font-weight: bold
+            margin: 0 auto
+            text-shadow: .1rem .1rem .1rem #111
         z-index: 777
         top: 50%
-        right: 50%
+        right: 44%
         color: #C18C00
         display: none
+
     h2
         position: absolute
         bottom: 2%
         right: 4%
         color: #111
-        font-size: 3.2rem
+        font-size: 2.2rem
         padding: 0.7rem 1.3rem
         background: #C18C00
         border-radius: .7rem
