--- a/styles/sass/_home.sass
+++ b/styles/sass/_home.sass
@@ -54,6 +54,7 @@
 
 .card
     position: relative
+    height: 440px
     &:hover
         h2
             display: none
@@ -84,8 +85,8 @@
             margin: 0 auto
             text-shadow: .1rem .1rem .1rem #111
         z-index: 777
-        top: 50%
-        right: 44%
+        top: 47%
+        right: 43%
         color: #C18C00
         display: none
 
