--- a/styles/sass/_global.sass
+++ b/styles/sass/_global.sass
@@ -1,3 +1,4 @@
+@use 'function'
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&family=Schibsted+Grotesk:ital,wght@0,400;0,500;0,600;0,900;1,400;1,600;1,700&display=swap')
 *
     margin: 0
@@ -11,7 +12,14 @@
     
 html
     font-size: 62.5%
+    @include function.responsive(991px)
+       font-size: 55.5%
+    @include function.responsive(416px)
+       font-size: 50%
 
+section
+    @include function.responsive(991px)
+       padding: 2rem  
 .btn
     display: inline-flex
     align-items: center
@@ -25,7 +33,10 @@ html
 
 .mt
     margin-top: 7rem
-
+.mx-w
+    width: 100% !important
+    max-width: 1004px !important
+    margin: 1.6rem auto !important
 img
     width: 100%
     height: 100%
