--- a/styles/sass/_footer.sass
+++ b/styles/sass/_footer.sass
@@ -2,3 +2,14 @@
     display: flex
     align-content: center
     justify-content: space-between
+    padding: 2rem
+    background: #111
+    p
+        font-size: 1.3rem
+        color: #fff
+    .icons
+        display: flex
+        gap: 1.4rem
+        a
+            color: #fff
+            font-size: 2rem
