--- a/styles/sass/_footer.sass
+++ b/styles/sass/_footer.sass
@@ -4,6 +4,7 @@
     justify-content: space-between
     padding: 2rem
     background: #111
+
     p
         font-size: 1.3rem
         color: #fff
@@ -13,3 +14,6 @@
         a
             color: #fff
             font-size: 2rem
+            &:hover
+                color: #C18C00
+    
