--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -18,6 +18,8 @@
             gap: 2rem
         nav ul a
             font-size: 1.6rem
+            &:hover
+                color: #C18C00
         .logo
             font-size: 2rem
     a
