--- a/styles/sass/_global.sass
+++ b/styles/sass/_global.sass
@@ -32,11 +32,13 @@ section
         transform: scale(1.1)
 
 .mt
-    margin-top: 7rem
+    margin-top: 8rem
 .mx-w
     width: 100% !important
     max-width: 1004px !important
     margin: 1.6rem auto !important
+.h700
+    height: 780px
 img
     width: 100%
     height: 100%
