--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -1,3 +1,4 @@
+@use 'function'
 .header
     position: fixed
     left: 0
@@ -24,3 +25,14 @@
             font-size: 2rem
     a
         color: #fff
+
+
+.buttonsMobile
+    display: none
+    @include function.responsive(789px)
+        display: flex
+        align-items: center
+        gap: 1.5rem
+        a, .btnbars
+            font-size: 2rem
+            color: #fff
