--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -13,6 +13,10 @@
         margin: 0 auto
         display: flex
         justify-content: space-between
+        nav
+        @include function.responsive(789px)
+              position: absolute
+              right: -500%         
         nav, nav ul
             display: flex
             align-items: center
