--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -37,6 +37,6 @@
         display: flex
         align-items: center
         gap: 1.5rem
-        a, .btnbars
+        .iconHome, .btnbars
             font-size: 2rem
             color: #fff
