--- a/styles/sass/_footer.sass
+++ b/styles/sass/_footer.sass
@@ -9,6 +9,7 @@
         flex-direction: column
         justify-content: center
         gap: 1.3rem
+        text-align: center
     p
         font-size: 1.3rem
         color: #fff
