--- a/styles/sass/_footer.sass
+++ b/styles/sass/_footer.sass
@@ -9,7 +9,9 @@
         flex-direction: column
         justify-content: center
         gap: 1.3rem
-        text-align: center
+        text-align: center  
+        p, .icons
+            margin: 0 auto
     p
         font-size: 1.3rem
         color: #fff
