--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -36,7 +36,8 @@
     @include function.responsive(789px)
         display: flex
         align-items: center
-        gap: 1.5rem
+        gap: 2rem
         .iconHome, .btnbars
             font-size: 2rem
             color: #fff
+            padding: 0.3rem .6rem
