--- a/styles/sass/_header.sass
+++ b/styles/sass/_header.sass
@@ -13,10 +13,14 @@
         margin: 0 auto
         display: flex
         justify-content: space-between
-        nav
-            @include function.responsive(789px)
-                position: absolute
-                right: -500%         
+        @include function.responsive(789px)
+            flex-direction: column
+            gap: 1rem
+            nav
+                transform: translateX(1000px)
+                &.active
+                    transform: translateX(0)
+                             
         nav, nav ul
             display: flex
             align-items: center
@@ -36,7 +40,7 @@
     @include function.responsive(789px)
         display: flex
         align-items: center
-        gap: 2rem
+
         .iconHome, .btnbars
             font-size: 2rem
             color: #fff
